[package]
name = "hclua"
version = "0.1.6"
edition = "2021"
authors = [ "hpnlic <hpnlic@hotmail.com>" ]
description = "hclua"
repository = "https://github.com/hcengine/hclua"
license = "Apache-2.0"
keywords = ["hclua", "lua54", "lua51", "luajit"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libc = "0.2.162"
lazy_static = "1.5.0"
log="0.4.22"
hcproto = { path = "../hcproto/Rust" }
algorithm = "0.1.15"
serde = { version = "1.0", features = ["derive"] }

ffi = { package = "hclua-src", version = "0.1.1", path = "hclua-src" }
hclua_macro = { package = "hclua-macro", version = "0.1.6", path = "hclua-macro" }

[workspace]
members = ["hclua-src", "hclua-macro"]

[features]
lua54=["ffi/lua54"]
lua53=["ffi/lua53"]
lua52=["ffi/lua52"]
lua51=["ffi/lua51"]
luajit=["ffi/luajit"]
luajit52=["luajit", "ffi/luajit52"]
